# bevy_confetti

./: Cargo.toml
src/: lib.rs  main.rs
