[package]
name = "bevy_confetti"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
debug = false
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bevy = "0.12.1"
bevy_ggrs = "0.14.0"
bevy_rapier2d = "0.23.0"
leafwing-input-manager = "0.11.2"
rand = "0.8.5"
