[package]
name = "bevy_confetti"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
debug = false
opt-level = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bevy = "0.13.0"
bevy-inspector-egui = "0.23.2"
bevy_egui = "0.25.0"
bevy_ggrs = "0.14.0"
bevy_rapier2d = "0.25.0"
leafwing-input-manager = "0.13.3"
rand = "0.8.5"
